# Simulator

./: .gitignore  CMakeLists.txt  README.md  config.json
include/: p_util.h  simplerover.h  simstructs.h
src/: libAP_JSON.cpp  main.cpp  p_utils.cpp  simplerover.cpp
startup/: roverstart.sh
